internal/generate/testdata/errors/BindingWithIncorrectSelection.go
package errors

const _ = `# @octoqlgen
query GetAccountWrongFields {
  account { id }
}
`
